# temet-vault-agent

./: .builder_result.json  .gitignore  BUILD_PROMPT.md  README.md  pyproject.toml
data/sample_vault/: Cuban-Economy.md  LLM-local-inference.md  LangGraph-vs-OpenClaw.md  Obsidian-workflow.md
examples/: ask_vault.py  autonomous_loop.py  chat.py
src/: __init__.py  agent.py  feedback.py  llm.py  main.py  memory.py  retrieval.py  scheduler.py
src/tools/: __init__.py
systemd/: README.md  temet-agent.service  temet-agent.timer
tests/: test_autonomous.py  test_basic.py
