[project]
name = "temet-vault-agent"
version = "0.1.0"
description = "Local agent over Obsidian vault using LangGraph + Ollama"
authors = [{name = "ybesada100"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "ollama>=0.3.0",
    "rank-bm25>=0.2.2",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
vault-agent = "src.main:main"
